# datavault

./: .gitignore  README.md  analyze_project.py  project_structure.yaml  setup.py
dev/data-format/: .coverage  d.json  main.py  pyproject.toml  pytest.ini  requirements.txt  scrape.py  setup.py  test.txt
dev/data-format/data/scrape_this_site/: 20241110_130035.html  20241110_130110.html
dev/data-format/src/ai_analyzer/: __init__.py  ai_processor.py  cli.py
dev/data-format/tests/: test_ai_processor.py  test_logger.py  test_main.py
dev/novatool/: pyproject.toml  pytest.ini  server_runner.py
dev/novatool/novatool/: tool_router.py
dev/novatool/novatool/commands/: ai_cmd.py  content_cmd.py  list_cmd.py  news_cmd.py  project_cmd.py
dev/novatool/novatool/core/: CORE_README.md
dev/novatool/novatool/outputs/: ai_command_test_report_20241113_153623.md  ai_command_test_report_20241113_154025.md  ai_command_test_report_20241113_154333.md  ai_command_test_report_20241113_154502.md  ai_command_test_report_20241113_154822.md  ai_command_test_report_20241113_155038.md  ai_command_test_report_20241113_155134.md  ai_command_test_report_20241113_155248.md  ai_command_test_results_20241113_153623.json  ai_command_test_results_20241113_154025.json  ai_history.json  (+53 more)
dev/novatool/tests/: demo_telephone.py  hud_config.json  showcase_ai_components.py  stress_test.py  telephone_game.py  telephone_hud.py  test_ai_commands.py  test_ai_components.py  test_ai_system.py  test_client.py  test_commands.py  test_hud_config.json  test_server.py  test_telephone_game.py  test_telephone_hud.py
(+338 files in other folders)
