[project]
name = "novatool"
version = "0.1.0"
description = "Nova Development Tools for Project Management"
requires-python = ">=3.8"
dependencies = [
    "typer",
    "rich",
    "pandas",
    "openai",
    "python-dotenv",
    "requests",
    "newsapi-python"
]

[project.scripts]
nova = "novatool.tool_router:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]